// Copyright 2022 Jeremy Edwards
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package filetools.internal.metadata.proto;
option go_package = "github.com/jeremyje/filetools/internal/metadata/proto";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// Stat is the OS level file stat.
// https://pkg.go.dev/io/fs#FileInfo
message FileStat {
  // base name of the file
  string name = 1;
  // length in bytes for regular files; system-dependent for others
  int64 size = 2;
  // file mode bits
  uint32 mode = 3;
  // modification time
  google.protobuf.Timestamp mod_time = 4;
  // If true, this record represents a directory.
  bool is_dir = 5;
  
  string full_path = 6;
  string mime_type = 7;
  string file_extension = 8;
}

message FileMetadataMedia {
  map<string, string> attributes = 1;
  int32 orientation = 2;
  google.protobuf.Timestamp created_timestamp = 3;
  google.protobuf.Timestamp original_timestamp = 4;

  string format = 5;
  string file_type = 6;
  string title = 7;
  string comment = 8;
  map<string, string> raw = 9;
  google.protobuf.Duration duration = 10;
}

message FileMetadata {
  FileStat file_stat = 1;
  FileMetadataMedia media = 3;
}
